# PecuniaAI

./: .gitignore  README.md  requirements-dev.txt  requirements.txt
app/backend/: README.md  main.py  services.py
app/frontend/: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/frontend/src/: App.css  App.tsx  index.css
app/frontend/src/components/custom/: Chat.tsx  ChatContainer.tsx  ChatInput.tsx  ChatLoader.tsx  MessageBubble.tsx
data/ingestion/: document_processor.py  pipeline_orchestrator.py  requirements.txt  upload_to_cloud.py  web_scraper.py
data/tests/: conftest.py  requirements.txt  upload_to_cloud_test.py
docs/: Architecture.md  Requirements.md  pipeline-components
libs/python/: openai_client.py  vectordb_client.py
pecunia_helpers/: pyproject.toml
pecunia_helpers/backend_data/: openai_client.py  vectordb_client.py
pecunia_helpers/backend_data.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pecunia_helpers/pecunia_helpers.egg-info/: PKG-INFO  SOURCES.txt
