[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pecunia-helpers"
version = "0.1.0"
description = "Helper utilities for PecuniaAI"
authors = [
    { name = "Zain Mustafa" }
]

# You can add dependencies here if needed
dependencies = []

[tool.setuptools]
packages = ["backend_data"]
